--- a/ytb-video-sharing-app-be/configs/config.dev.env
+++ b/ytb-video-sharing-app-be/configs/config.dev.env
@@ -2,4 +2,4 @@ MYSQL_ROOT_PASSWORD=admin123
 MYSQL_DATABASE=ytb
 MYSQL_HOST=localhost # sau nay doi thanh mysql khi run docker
 MYSQL_PORT=3307
-MYSQL_DSN=mysql://root:${MYSQL_ROOT_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DATABASE}
+MYSQL_DSN=root:${MYSQL_ROOT_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DATABASE}
