feat: done authentication, authorization

--- a/ytb-video-sharing-app-be/configs/config.dev.env
+++ b/ytb-video-sharing-app-be/configs/config.dev.env
@@ -2,4 +2,14 @@ MYSQL_ROOT_PASSWORD=admin123
 MYSQL_DATABASE=ytb
 MYSQL_HOST=localhost # sau nay doi thanh mysql khi run docker
 MYSQL_PORT=3307
-MYSQL_DSN=root:${MYSQL_ROOT_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DATABASE}
+MYSQL_DSN=root:${MYSQL_ROOT_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DATABASE}?parseTime=true&loc=Local
+
+MIGRATION_DIR=file://db/migrations
+
+SERVER_ADDRESS=:3000
+
+PRIVATE_KEY_PATH=./jwtRSA256.key
+PUBLIC_KEY_PATH=./jwtRSA256.key.pub
+
+EXPIRE_TIME_ACCESS_TOKEN=5 # minutes
+EXPIRE_TIME_REFRESH_TOKEN=7 # days
