feat: done realtime when shared video for other logged in and online, setup kafka and websocket server

--- a/ytb-video-sharing-app-be/configs/config.dev.env
+++ b/ytb-video-sharing-app-be/configs/config.dev.env
@@ -7,9 +7,20 @@ MYSQL_DSN=root:${MYSQL_ROOT_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_D
 MIGRATION_DIR=file://db/migrations
 
 SERVER_ADDRESS=:3000
+WEBSOCKET_SERVER_ADDRESS=:3001
 
 PRIVATE_KEY_PATH=./jwtRSA256.key
 PUBLIC_KEY_PATH=./jwtRSA256.key.pub
 
 EXPIRE_TIME_ACCESS_TOKEN=5 # minutes
 EXPIRE_TIME_REFRESH_TOKEN=7 # days
+
+KAFKA_BROKERS=localhost:29092,localhost:29093,localhost:29094         # Danh sách brokers
+KAFKA_TOPIC=videos                                                    # topic videos
+KAFKA_GROUP_ID=my-consumer-group                                      # Nhóm Consumer
+KAFKA_REQUEST_TIMEOUT=3000                                            # Timeout cho Kafka (tuỳ chỉnh) (ko đặt thì mặc định là 2 minutes)
+KAFKA_RETRY_ATTEMPTS=5                                                # Số lần thử kết nối lại nếu gặp lỗi
+KAFKA_CONSUMER_FETCH_MIN_BYTES=1                                      # lượng dữ liệu nhỏ nhất đủ trên topic -> consumer sẽ consume
+KAFKA_CONSUMER_FETCH_MAX_BYTES=1000000                                # lượng dữ liệu lớn nhất đủ trên topic mà consumer có thể consume
+KAFKA_CONSUMER_MAX_WAIT=300                                           # Thời gian đợi cho việc fetch dữ liệu về (khi ko đủ min bytes để fetch) theo milisecond
+KAFKA_PRODUCER_MAX_WAIT=300                                           # Thời gian đợi cho việc push dữ liệu (khi ko đủ min bytes để push) theo milisecond
