--- a/ytb-video-sharing-app-be/Makefile
+++ b/ytb-video-sharing-app-be/Makefile
@@ -42,3 +42,15 @@ tests-cover:
 
 tests-clear:
 	@rm internal/repository/test-cover.out
+
+install-proto-gen:
+	@go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+	@go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	@export PATH="$PATH:$(go env GOPATH)/bin"
+
+generate-proto-compile:
+	@protoc \
+		--go_out=. \
+		--go_opt=paths=source_relative \
+	  ./third_party/*.proto
+
