--- a/ytb-video-sharing-app-fe/.env
+++ b/ytb-video-sharing-app-fe/.env
@@ -1,2 +1,4 @@
 VITE_API_URL=http://localhost:3000/api/v1
-VITE_WS_URL=ws://localhost:3000
+VITE_WS_URL=ws://localhost:3001/ws
+
+VITE_API_KEY=AIzaSyCLQRWXvYfA59PDFKcBag87gGKxYiK7K5A
