--- a/ytb-video-sharing-app-be/configs/config.dev.example.env
+++ b/ytb-video-sharing-app-be/configs/config.dev.example.env
@@ -12,8 +12,8 @@ WEBSOCKET_SERVER_ADDRESS=:3001
 PRIVATE_KEY_PATH=./jwtRSA256.key
 PUBLIC_KEY_PATH=./jwtRSA256.key.pub
 
-EXPIRE_TIME_ACCESS_TOKEN=43200
-EXPIRE_TIME_REFRESH_TOKEN=60
+EXPIRE_TIME_ACCESS_TOKEN= # minutes
+EXPIRE_TIME_REFRESH_TOKEN= # days
 
 KAFKA_BROKERS=localhost:29092,localhost:29093,localhost:29094         # Danh sách brokers
 KAFKA_TOPIC=videos                                                    # topic videos
