change env file

--- a/ytb-video-sharing-app-be/Dockerfile
+++ b/ytb-video-sharing-app-be/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /root/
 
 COPY --from=builder /app/main .
 
-COPY --from=builder /app/configs ./configs
+COPY --from=builder /app/configs/config.dev.env ./configs/config.dev.env
 
 # rest api port
 EXPOSE 3000
