--- a/ytb-video-sharing-app-fe/Dockerfile
+++ b/ytb-video-sharing-app-fe/Dockerfile
@@ -1,15 +1,27 @@
-FROM node:18 as builder
+FROM node:18 AS build
 
 WORKDIR /app
+
+COPY package.json package-lock.json ./
+RUN npm install
+
 COPY . .
 
-# Cài đặt dependencies và build
-RUN npm install && npm run build
+ARG VITE_API_URL
+ARG VITE_WS_URL
+ARG VITE_API_KEY
+ENV VITE_API_URL=${VITE_API_URL}
+ENV VITE_WS_URL=${VITE_WS_URL}
+ENV VITE_API_KEY=${VITE_API_KEY}
 
-# Sử dụng nginx để serve React app
-FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY --from=builder /app/build /usr/share/nginx/html
+RUN npm run build
+
+FROM nginx:latest
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
