--- a/ytb-video-sharing-app-be/Makefile
+++ b/ytb-video-sharing-app-be/Makefile
@@ -54,3 +54,10 @@ generate-proto-compile:
 		--go_opt=paths=source_relative \
 	  ./third_party/*.proto
 
+gencert:
+	echo "creating server.key"
+	openssl genrsa -out server.key 2048
+	openssl ecparam -genkey -name secp384r1 -out server.key
+	echo "creating server.crt"
+	openssl req -new -x509 -sha256 -key server.key -out server.crt -batch -days 3650
+	cat server.crt server.key > server.pem
