--- a/ytb-video-sharing-app-fe/Dockerfile
+++ b/ytb-video-sharing-app-fe/Dockerfile
@@ -14,13 +14,13 @@ ENV VITE_API_URL=${VITE_API_URL}
 ENV VITE_WS_URL=${VITE_WS_URL}
 ENV VITE_API_KEY=${VITE_API_KEY}
 
-RUN npm run build
+RUN npm run dev -- --host
 
 FROM nginx:latest
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
