--- a/ytb-video-sharing-app-fe/nginx.conf
+++ b/ytb-video-sharing-app-fe/nginx.conf
@@ -1,9 +1,17 @@
+user www-data;
 worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+include /etc/nginx/modules-enabled/*.conf;
+
 events {
     worker_connections 1024;
 }
 
 http {
+    sendfile on;
+    tcp_nopush on;
+    types_hash_max_size 2048;
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -13,18 +21,56 @@ http {
 
     server {
         listen 80;
+        # server_name 44.208.46.175;
         server_name localhost;
 
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
         location / {
+          proxy_ssl_verify off;
+          if ($request_method = 'OPTIONS') {
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+          #
+          # Custom headers and headers various browsers *should* be OK with but aren't
+          #
+          add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+          #
+          # Tell client that this pre-flight info is valid for 20 days
+          #
+          add_header 'Access-Control-Max-Age' 1728000;
+          add_header 'Content-Type' 'text/plain; charset=utf-8';
+          add_header 'Content-Length' 0;
+          return 204;
+          }
+          if ($request_method = 'POST') {
+              add_header 'Access-Control-Allow-Origin' '*' always;
+              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+              add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+              add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+          }
+          if ($request_method = 'GET') {
+              add_header 'Access-Control-Allow-Origin' '*' always;
+              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+              add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+              add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+          }
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri /index.html;
         }
 
+        location /api/v1 {
+            proxy_pass https://backend:3000/api/v1;
+            proxy_ssl_verify off;  # Nếu backend dùng self-signed certificate
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         location /ws/ {
+            proxy_ssl_verify off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -36,18 +82,10 @@ http {
             proxy_busy_buffers_size 128k;
             proxy_buffering off;
 
-            proxy_pass http://backend:3001;
+            proxy_pass https://backend:3001;
 
             # Log để debug
             access_log /var/log/nginx/ws.log;
-        }
-
-        location /api/v1/ {
-            proxy_pass http://backend:3000/api/v1/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
